--- a/contato.html
+++ b/contato.html
@@ -4,15 +4,15 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Contato - Barbearia Alura</title>
-		<link rel="stylesheet" href="reset.css"> <!--A ordem importa, primeiro tira o que o navegador faz e depois roda nosso CSS, se for ao contrario irá mudar nosso CSS -->
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="css/reset.css"> <!--A ordem importa, primeiro tira o que o navegador faz e depois roda nosso CSS, se for ao contrario irá mudar nosso CSS -->
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<!--Header é a divisao do cabeçalho do site-->
 		<header>
 			<div class="caixa">
 				<!--Alt é um titulo invisivel da imagem, para poder ser lido pelo leito de tela por exemplo-->
-				<h1><img src="logo.png" alt="Logo da Barbearia Alura"></h1>
+				<h1><img src="img/logo.png" alt="Logo da Barbearia Alura"></h1>
 
 				<nav>
 					<ul>
@@ -110,7 +110,7 @@
 		</main>
 
 		<footer>
-			<img src="logo-branco.png" alt="Logo da Barbearia Alura">
+			<img src="img/logo-branco.png" alt="Logo da Barbearia Alura">
 			<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
 		</footer>
 	</body>
