--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta chartset="UTF-8"><!--Diz ao navegador para usar o padrão UTF-8, que tem muito mais caracteres que a ASCII, contendo acentuação por exemplo-->
 		<meta name="viewport" content="width=device-width">
 		<title>Barbearia Alura</title><!--Titulo da página, o que aparece na aba-->
-		<link rel="stylesheet" href="reset.css"> <!--A ordem importa, primeiro tira o que o navegador faz e depois roda nosso CSS, se for ao contrario irá mudar nosso CSS -->
-		<link rel="stylesheet" href="style.css"> <!--Trás outro arquivo, no caso um style sheet (Código de Estilo), dando a localização em href. Isso seria como um método de Java-->
+		<link rel="stylesheet" href="css/reset.css"> <!--A ordem importa, primeiro tira o que o navegador faz e depois roda nosso CSS, se for ao contrario irá mudar nosso CSS -->
+		<link rel="stylesheet" href="css/style.css"> <!--Trás outro arquivo, no caso um style sheet (Código de Estilo), dando a localização em href. Isso seria como um método de Java-->
 		<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet"><!--Fonte do Google (Site com 959 fontes para web: https://fonts.google.com/) -->
 	</head>
 
@@ -13,7 +13,7 @@
 		<!-- Cabeçalho, por ser uma divisão muito usada criou-se o header no HTML5, para nao ter que usar Div -->
 		<header>
 			<div class="caixa">
-				<h1><img src="logo.png"></h1>
+				<h1><img src="img/logo.png"></h1>
 
 				<nav>
 					<ul>
@@ -27,7 +27,7 @@
 			</div>
 		</header>
 
-		<img class="banner" src="banner.jpg">
+		<img class="banner" src="img/banner.jpg">
 
 		<main>
 			<section class="principal"><!--Section marca uma seção, parecido com div, mas na section existe realmente uma divisão de titulo e conteudo-->
@@ -36,7 +36,7 @@
 					Sobre a Barbearia Alura
 				</h2><!--Titulos, h1, h2, h3, h4, h5, h6-->
 
-				<img class="utensilios" src="utensilios.jpg" alt="Utensilios de barbeiro.">
+				<img class="utensilios" src="img/utensilios.jpg" alt="Utensilios de barbeiro.">
 
 				<p>Localizada no coração da cidade a <strong>Barbearia</strong><!--Negrito --> Alura traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p><!--Paragrafo -->
 
@@ -66,7 +66,7 @@
 						<li class="itens">Pontualidade</li>
 						<li class="itens">Limpeza</li>
 					<!--ul e img precisam ficar colados para que o inline-block funcione-->
-					</ul><img src="beneficios.jpg" class="imagem-beneficios">
+					</ul><img src="img/beneficios.jpg" class="imagem-beneficios">
 				</div>
 			</section>
 
@@ -77,7 +77,7 @@
 		</main>
 
 		<footer>
-			<img src="logo-branco.png">
+			<img src="img/logo-branco.png">
 			<p class="copyright">&copy; Copyright Barbearia Alura - 2019</p>
 		</footer>
 	</body>
