--- a/produto.html
+++ b/produto.html
@@ -4,14 +4,14 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Produtos - Barbearia Alura</title>
-		<link rel="stylesheet" href="reset.css"> <!--A ordem importa, primeiro tira o que o navegador faz e depois roda nosso CSS, se for ao contrario irá mudar nosso CSS -->
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="css/reset.css"> <!--A ordem importa, primeiro tira o que o navegador faz e depois roda nosso CSS, se for ao contrario irá mudar nosso CSS -->
+		<link rel="stylesheet" href="css/style.css">
 	</head>
 	<body>
 		<!--Header é a divisao do cabeçalho do site-->
 		<header>
 			<div class="caixa"><!--Divisoes servem para marcar o Conteudo e colocar id ou classes para manipular em CSS-->
-				<h1><img src="logo.png"></h1>
+				<h1><img src="img/logo.png"></h1>
 
 				<nav>
 					<ul>
@@ -30,19 +30,19 @@
 			<ul class="produtos">
 				<li>
 					<h2>Cabelo</h2>
-					<img src="cabelo.jpg">
+					<img src="img/cabelo.jpg">
 					<p class="produto-descricao">Na tesoura ou máquina, como o cliente preferir</p>
 					<p class="produto-preco">R$ 25,00</p>
 				</li>
 				<li>
 					<h2>Barba</h2>
-					<img src="barba.jpg">
+					<img src="img/barba.jpg">
 					<p class="produto-descricao">Corte e desenho profissional de Barba</p>
 					<p class="produto-preco">R$ 18,00</p>
 				</li>
 				<li>
 					<h2>Cabelo + Barba</h2>
-					<img src="cabelo+barba.jpg">
+					<img src="img/cabelo+barba.jpg">
 					<p class="produto-descricao">Pacote completo de Cabelo e Barba</p>
 					<p class="produto-preco">R$ 35,00</p>
 				</li>
